syntax = "proto3";

package transport_catalogue_pb;

import "graph.proto";

message RouteEdgeInfo {
  bytes stop_name = 1;
  bytes bus = 2;
  uint32 span_count = 3;
  double time = 4;  
  bool type = 5; //Wait = 0, Bus = 1
};

message EdgeToRouteSegment {
  uint32 edge_id = 1;
  RouteEdgeInfo route_edge_info = 2;
};

message TransportRouter {
  repeated EdgeToRouteSegment edge_to_route_segment = 1;
  Graph graph = 2;
};